- Fixed bug #49074 (private class static fields can be modified by using reflection)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@286605 c90b9560-bf6c-de11-be94-00142212c4b1